--- a/app/src/main/res/layout/fragment_newsfeed.xml
+++ b/app/src/main/res/layout/fragment_newsfeed.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/newsfeed_layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -25,13 +27,18 @@
         android:layout_marginBottom="3dp"
         android:layout_below="@id/logout_button"/>
 
-    <ListView
-        android:id="@+id/posts_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/view1">
+    <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
+        android:id="@+id/pull_to_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/view1"
+        app:direction="both">
 
-    </ListView>
+        <ListView
+            android:id="@+id/posts_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
+    </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>
 
 </RelativeLayout>
