--- a/app/src/main/res/layout/posts_list_item.xml
+++ b/app/src/main/res/layout/posts_list_item.xml
@@ -1,71 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <ImageView
+        android:id="@+id/list_author_avatar"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginEnd="3dp"/>
 
-        <ImageView
-            android:id="@+id/photo_50"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginEnd="3dp"/>
-
-        <TextView
-            android:id="@+id/author_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/photo_50"
-            android:layout_marginStart="3dp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/post_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/author_name"
-            android:layout_toEndOf="@id/photo_50"
-            android:layout_marginStart="3dp"/>
-
-        <ImageView
-            android:id="@+id/post_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/post_text"
-            android:layout_toEndOf="@id/photo_50"
-            android:layout_marginStart="3dp"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
+    <TextView
+        android:id="@+id/list_author_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:textColor="@color/vk_black"
+        android:layout_toEndOf="@id/list_author_avatar"
+        android:layout_marginStart="3dp"
+        android:textStyle="bold"/>
 
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"/>
+    <TextView
+        android:id="@+id/list_post_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/vk_black"
+        android:layout_below="@id/list_author_name"
+        android:layout_toEndOf="@id/list_author_avatar"
+        android:layout_marginStart="3dp"/>
 
-        <TextView
-            android:id="@+id/likes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"/>
+    <ImageView
+        android:id="@+id/list_post_photo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/list_post_text"
+        android:layout_alignStart="@id/list_post_text"
+        android:layout_marginStart="3dp"/>
 
-        <View
-            android:layout_width="12dp"
-            android:layout_height="12dp"
-            android:background="@drawable/like_image"
-            android:layout_toStartOf="@id/likes"
-            android:layout_marginEnd="2dp"/>
+    <TextView
+        android:id="@+id/repost_description"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textColor="#1B1B1B"
+        android:layout_below="@id/list_post_photo"
+        android:layout_alignStart="@id/list_post_photo"
+        />
 
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/list_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/vk_black"
+        android:layout_below="@id/list_post_photo"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentStart="true"/>
 
+    <TextView
+        android:id="@+id/list_likes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/vk_black"
+        android:layout_alignTop="@id/list_date"
+        android:layout_alignParentEnd="true"/>
 
+    <View
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        android:background="@drawable/like_image"
+        android:layout_toStartOf="@id/list_likes"
+        android:layout_alignTop="@id/list_date"
+        android:layout_marginEnd="2dp"/>
 
-</LinearLayout>
+</RelativeLayout>
