--- a/app/src/main/res/layout/posts_list_item.xml
+++ b/app/src/main/res/layout/posts_list_item.xml
@@ -1,57 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/list_author_avatar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginEnd="3dp"/>
-
-    <TextView
-        android:id="@+id/list_author_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/vk_black"
-        android:layout_toEndOf="@id/list_author_avatar"
-        android:layout_marginStart="3dp"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:id="@+id/list_post_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/vk_black"
-        android:layout_below="@id/list_author_name"
-        android:layout_toEndOf="@id/list_author_avatar"
-        android:layout_marginStart="3dp"/>
-
-    <ImageView
-        android:id="@+id/list_post_photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/list_post_text"
-        android:layout_alignStart="@id/list_post_text"
-        android:layout_marginStart="3dp"/>
-
-    <TextView
-        android:id="@+id/repost_description"
+    <RelativeLayout
+        android:id="@+id/list_layout1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="#1B1B1B"
-        android:layout_below="@id/list_post_photo"
-        android:layout_alignStart="@id/list_post_photo"
-        />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="3dp">
+
+        <ImageView
+            android:id="@+id/list_author_avatar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginEnd="3dp"/>
+
+        <LinearLayout
+            android:id="@+id/list_layout2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/list_author_avatar"
+            android:orientation="vertical"
+            android:layout_marginStart="3dp"
+            android:layout_marginBottom="3dp">
+
+            <TextView
+                android:id="@+id/list_author_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/vk_black"
+                android:layout_marginStart="3dp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/list_post_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/vk_black"
+                android:layout_marginStart="3dp"/>
+
+            <TextView
+                android:id="@+id/repost_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="italic"
+                android:textColor="#4444FF"
+                />
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/list_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/vk_black"
-        android:layout_below="@id/list_post_photo"
-        android:layout_marginTop="10dp"
+        android:layout_below="@id/list_layout1"
+        android:layout_marginStart="5dp"
         android:layout_alignParentStart="true"/>
 
     <TextView
@@ -60,6 +67,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/vk_black"
         android:layout_alignTop="@id/list_date"
+        android:layout_marginEnd="5dp"
         android:layout_alignParentEnd="true"/>
 
     <View
